--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-*,
 html {
     margin: 0;
     padding: 0;
@@ -17,25 +16,18 @@ body {
     background-color: Lavender;
 }
 
-button:hover {
-    color: mediumpurple;
+#cat {
+    background-image: url("https://sun9-16.userapi.com/c854224/v854224663/1d467b/wTpFTl8QHkc.jpg");
+    background-size: 150%;
+    width: 150px;
+    height: 100px;
+    border-radius: 10px;
+    margin-left: 54px; 
 }
 
-button:active {
-    color: rebeccapurple;
-}
-
-.center {
-    width: 100%;
-    height: 50%;
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
-    text-align: center;
+#cat:active {
+    background-image: url("https://pbs.twimg.com/media/ESU36K1WAAAz20y.jpg");
+    background-size: 135%;
 }
 
 h1 {
@@ -44,4 +36,78 @@ h1 {
 
 p {
     font-size: 64px;
+}
+
+#meowgram {
+    font: icon;
+    font-size: 52px;
+    font-weight: 700;    
+}
+label {
+    margin-left: 54px;
+    font-style: oblique;
+    font-size: 30px;
+    font-weight: 300;
+}
+#mess {
+    margin-left: 27px;
+    font-size: 24px;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+.button {
+	position: fixed;
+	text-align: center;
+	font-size: 30px;
+	font-family: 'Raleway', sans-serif;
+	color:mediumpurple;
+	width: 350px;
+	height: 100px;
+	margin-top: calc(50vh - 25px);
+	margin-left: calc(50vw - 175px);
+
+	border-radius: 30px;
+	text-shadow: 
+		0px 5px hsl(220, 80%, 30%), 
+		0px 10px 10px #0003;
+	box-shadow: 
+		0px 0px 0px 15px hsl(330, 80%, 50%),
+		0px 10px 0px 15px hsl(330, 80%, 40%),
+		0px 20px 20px 15px #0003;
+	cursor: pointer;
+	border-radius: 100px 30px 100px 30px;
+
+}
+
+.button p {
+	margin-top: 20px;
+	transform: rotate(-3deg);
+}
+
+.button:hover {
+	animation: .8s morph ease infinite;
+}
+
+.button:hover p {
+	animation: .8s rot ease infinite;
+}
+
+@keyframes morph {
+	0% {
+		border-radius: 100px 30px 100px 30px;
+	} 50% {
+		border-radius: 30px 100px 30px 100px;
+	} 100% {
+		border-radius: 100px 30px 100px 30px;
+	}
+}
+
+@keyframes rot {
+	0% {
+		transform: rotate(-3deg);
+	} 50% {
+		transform: rotate(3deg);
+	} 100% {
+		transform: rotate(-3deg);
+	}
 }
