--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ label {
 	text-align: center;
 	font-size: 30px;
 	font-family: 'Raleway', sans-serif;
-	color:mediumpurple;
+	color: black;
 	width: 350px;
 	height: 100px;
 	margin-top: calc(50vh - 25px);
@@ -68,7 +68,7 @@ label {
 
 	border-radius: 30px;
 	text-shadow: 
-		0px 5px hsl(220, 80%, 30%), 
+		0px 5px #0008, 
 		0px 10px 10px #0003;
 	box-shadow: 
 		0px 0px 0px 15px hsl(330, 80%, 50%),
